--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechJobsIL - Israeli Tech Jobs</title>
+    <!-- Google AdSense - Publisher ID is set in the GoogleAd component -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
