fix: Address PR review feedback
- Add named export for GoogleAd component (alongside default export)
- Fix useEffect dependency - only run once on mount
- Add min-height to InFeedAd to prevent CLS
- Update index.html comment for clarity

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechJobsIL - Israeli Tech Jobs</title>
-    <!-- Google AdSense - Publisher ID is set in the GoogleAd component -->
+    <!-- Google AdSense - Client ID is set on ad units via VITE_ADSENSE_CLIENT_ID env var -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
      crossorigin="anonymous"></script>
   </head>
