--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechJobsIL - Israeli Tech Jobs</title>
-    <!-- Google AdSense - Client ID is set on ad units via VITE_ADSENSE_CLIENT_ID env var -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-     crossorigin="anonymous"></script>
+    <!-- Google AdSense script is loaded dynamically in GoogleAd.tsx with the correct client ID -->
   </head>
   <body>
     <div id="root"></div>
